# part2pop

./: .coverage  .coveragerc  .gitattributes  .gitignore  2016-04-25_diagnostics_summary.txt  CITATION.cff  CONTRIBUTING.md  DISCLAIMER  MANIFEST.in  README.md  README.md.template  README.pypi.md  Untitled.ipynb  codecov.yml  coverage.xml  diagnostics_summary.txt  environment.yml  launch_viewer.py  paper.bib  paper.html  paper.md  pyproject.toml  pytest.ini  requirements.txt  sandbox_diff.txt  setup.cfg  title-fix.css
.githooks/: pre-push
.github/: CODEOWNERS
.github/workflows/: ci.yml  draft-pdf.yml  release.yml  update-readme-badge.yml
diag/: 20160425_summary.txt
docs/: README.md  analysis_variables.md  architecture.md  development-workflow.md  extending.md  freezing.md  optics.md  population_builders.md  roadmap.md  species.md  visualization.md
docs/decisions/: 0001-builder-registry-contract.md  0002-builder-categories-and-deferred-observation-model-work.md  0003-gui-metadata-source-of-truth.md  0004-joss-release-scope.md
examples/: 01_optics_lognormal_mixtures.ipynb  01_optics_mixtures_and_morphologies.ipynb  02_ccn_partmc_and_mam4.ipynb  02_ccn_partmc_vs_mam4.ipynb  03_inp_monodisperse_and_lognormal.ipynb  03_inp_monodisperse_vs_lognormal.ipynb  04_aerosol_bnn.py  04_hiscale_observations.ipynb
examples/.ipynb_checkpoints/: 01_optics_lognormal_mixtures-checkpoint.ipynb  02_optics_morphologies-checkpoint.ipynb  03_inp_monodisperse_vs_lognormal-checkpoint.ipynb
examples/example_data/: hiscale_population_config.json
examples/example_data/Alpert_Knopf_2016/: Alpert_Knopf_2016_Fig1_data.csv  Fig1_data.csv
examples/example_data/HISCALE_data_0425/: HiScaleAMS_G1_20160425_R0.txt  Splat_Composition_25-Apr-2016.txt
examples/helpers/: pymiescatt_comparison.py
examples_alsoOld/: 01_optics_lognormal_mixtures.ipynb
examples_old/: 01_optics_lognormals_savedOct5.ipynb  03_ccn_partmc_vs_mam4.ipynb
flexplot-grid/: README.md  pyproject.toml
flexplot-grid-1/: setup.cfg
flexplot-grid-1/src/flexplot_grid/: _version.py
flexplot-grid/examples/: demo.py
flexplot-grid/src/flexplot_grid/: __init__.py  helpers.py  layout.py
flexplot-grid/tests/: test_layout.py
paper/: overview_flowchart.mmd  overview_flowchart_buggy.md  overview_flowchart_fontTooSmall.mmd  paper.bib  paper.md
part2pop/src/part2pop/io/: __init__.py
pyparticle-viz/: README.md  pyproject.toml  setup.cfg
pyparticle-viz/docs/: usage.md
pyparticle-viz/examples/: partmc_demo.py
pyparticle-viz/examples/configs/: partmc_example.json
pyparticle-viz/src/PyParticle/: __init__.py  population.py
pyparticle-viz/src/PyParticle/viz/: __init__.py  formatting.py  grids.py  layout.py  plotting.py  styling.py
pyparticle-viz/tests/: test_grids.py  test_viz.py
reports/: data_prep_migration.md  reference_report.json
scripts/: build_init_pop_from_obs.py  launch_viewer.py
src/part2pop/: README.md  __init__.py  aerosol_particle.py
src/part2pop.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/part2pop/analysis/: __init__.py  base.py  builder.py  defaults.py  distributions.py
src/part2pop/freezing/: __init__.py  base.py  builder.py
src/part2pop/io/: loader.py  saver.py
src/part2pop/optics/: builder.py
src/part2pop/population/: README.md  __init__.py  base.py  builder.py  utils.py
src/part2pop/species/: README.md  __init__.py  registry.py  resolution.py
src/part2pop/viz/: base.py  builder.py  style.py
src/pyparticle/: __init__.py  utilities.py
src/pyparticle.egg-info/: PKG-INFO  SOURCES.txt
src/pyparticle/analysis/: distributions.py
src/pyparticle/data/: __init__.py
src/pyparticle/freezing/: base.py
src/pyparticle/optics/: base.py  builder.py  refractive_index.py
src/pyparticle/population/: base.py  builder.py  utils.py
tests/: conftest.py
tests/integration/: test_alpert&knopf_inp.py  test_ccn.py  test_hiscale_example.py  test_optics_pymiescatt.py
tests/routine/: test_optics_factory_registry.py  test_viz_factory_registry.py
tests/tests/integration/: test_binned_vs_sampled_lognormals.py  test_mie_optics.py  test_simple_ccn.py
tests/unit/: test__patch.py  test_aerosol_particle.py  test_constants.py  test_utilities.py
tests/unit/aerosol_particle/: test_particle.py  test_particle_behaviors.py
tests/unit/analysis/: ___init__.py  conftest.py  test_base.py  test_builder.py  test_builder.py.rej  test_defaults.py  test_distributions.py  test_distributions.py.rej  test_global_registry.py  test_global_registry.py.rej
tests/unit/constants/: test_constants.py
tests/unit/freezing/: test_base.py  test_base.py.rej  test_builder.py  test_builder.py.rej
tests/unit/io/: test__utils.py  test_loader.py  test_loader_saver.py  test_saver.py
tests/unit/optics/: test_base.py  test_base.py.rej  test_builder.py  test_refractive_index.py  test_utils.py
tests/unit/population/: test_base.py  test_base.py.rej  test_builder.py  test_utils.py  test_utils.py.rej
tests/unit/species/: test_base.py  test_registry.py  test_resolution.py  test_species_modifications.py
tests/unit/utilities/: test_utilities.py
tests/unit/viz/: test_base.py  test_builder.py  test_registry.py  test_series_line.py  test_state_line.py  test_state_scatter.py  test_style.py  test_style_manager.py
tests/unit_old/analysis/: __init__.py  test_global_registry.py
tests/unit_old/analysis_old/: test_defaults.py  test_global_registry.py
tests/unit_old/population/: test_base.py  test_builder.py
tests_old/routine/: test_population_factory_registry.py  test_viz_factory_registry.py
tmp_copy_just_in_case2/: CITATION.cff  RELEASING.md  paper.md  process_partmc_ensemble_preSpeedUp.sh  setup.cfg
tmp_copy_just_in_case2/examples/: 01_optics_mixtures_and_morphologies.ipynb
tmp_copy_just_in_case2/examples/helpers/: pymiescatt_comparison.py.bak
tmp_copy_just_in_case2/src/part2pop/: _patch.py
tmp_copy_just_in_case2/tmp_copy_just_in_case2/: coverage.xml  process_partmc_chunk.sh  process_partmc_chunk_array.sh  process_partmc_ensemble.sh
viewer/: __init__.py  app.py  metadata.py  population_config_dump.json  ui.py
(+440 files in other folders)
