[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "part2pop"
version = "0.1.0"
description = "Core tools for particles, species, populations, and aerosol optics."
readme = "src/part2pop/README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }

authors = [
  { name = "Battelle Memorial Institute, LLC" }
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Atmospheric Science",
]

# Hard runtime deps inferred from imports in src/part2pop
dependencies = [
  "numpy",
  "scipy",
  "PyMieScatt",
  "netCDF4",
  "matplotlib",
  "importlib-resources",
  "pyBCabs",
]

[project.optional-dependencies]
test = [
  "pytest",
  "pytest-cov",
]

[project.urls]
Homepage = "https://github.com/pnnl/part2pop"
Source = "https://github.com/pnnl/part2pop"
Issues = "https://github.com/pnnl/part2pop/issues"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["part2pop*"]

# Ensure packaged data files used via importlib_resources are included
[tool.setuptools.package-data]
"part2pop" = [
  "data/species_data/*",
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra"
testpaths = [
  "tests",
]
