[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "part2pop"
version = "1.0.0"
description = "A unified analysis framework for standardizing aerosol populations from models, observations, and parameterizations."
readme = { file = "README.pypi.md", content-type = "text/markdown" }
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]

authors = [
  { name = "Laura Fierce" },
  { name = "Payton Beeler" },
]

keywords = [
  "aerosols",
  "atmospheric science",
  "aerosol-radiation",
  "aerosol-cloud",
  "particle populations",
  "CCN",
  "optics",
  "ice nucleation",
]

classifiers = [
  "Intended Audience :: Science/Research",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Atmospheric Science",
]

# All runtime dependencies (you can later refactor into optional extras)
dependencies = [
  "numpy",
  "scipy",
  "matplotlib",
  "netCDF4",
  "importlib-resources",
  "PyMieScatt",
  "pyBCabs",
  "tqdm",
  "streamlit",
]

[project.optional-dependencies]
# For running tests
test = [
  "pytest>=7",
  "pytest-cov>=4",
]


[project.urls]
Homepage = "https://github.com/pnnl/part2pop"
Repository = "https://github.com/pnnl/part2pop"
Issues = "https://github.com/pnnl/part2pop/issues"

[tool.setuptools.package-data]
part2pop = [
    "data/species_data/*.dat",
    "data/species_data/*.csv",
]

[tool.setuptools]
# src-layout: code lives in src/part2pop
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
