[metadata]
name = part2pop
description = A unified analysis framework for standardizing aerosol populations from models, observations, and parameterizations.
long_description = file: README.pypi.md
long_description_content_type = text/markdown
author = Laura Fierce, Payton Beeler
classifiers =
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: 3.14
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Atmospheric Science
keywords = aerosols, atmospheric science, aerosol-radiation, aerosol-cloud, particle populations, ccn, optics, ice nucleation

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.10
include_package_data = True
zip_safe = False

[options.package_data]
# Include package data files that tests and runtime code expect to exist under
# site-packages/part2pop/data/...
part2pop =
    data/species_data/*.dat
    data/species_data/*.csv
    data/**/*

[options.packages.find]
where = src
