[metadata]
name = flexplot-grid
version = attr: flexplot_grid.__version__
description = A flexible plotting package with grid layout helpers for Matplotlib.
author = Your Name
author_email = your.email@example.com
url = https://github.com/yourusername/flexplot-grid
license = MIT
keywords = matplotlib, plotting, grid, layout

[options]
packages = find:
install_requires =
    matplotlib
    numpy

[options.packages.find]
where = src

[options.extras_require]
testing =
    pytest
    pytest-cov

[options.entry_points]
console_scripts =
    flexplot = flexplot_grid.cli:main

[tool:pytest]
testpaths = tests
python_files = test_*.py
addopts = --cov=fleplot_grid --cov-report=term-missing