[tool.poetry]
name = "flexplot-grid"
version = "0.1.0"
description = "A flexible plotting package for creating grid layouts using Matplotlib."
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.4"
numpy = "^1.21"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"