[tool.poetry]
name = "pyparticle-viz"
version = "0.1.0"
description = "A flexible plotting package for particle population visualization."
authors = ["Your Name <youremail@example.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/yourusername/pyparticle-viz"
repository = "https://github.com/yourusername/pyparticle-viz"
keywords = ["particle", "visualization", "plotting", "scientific"]

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.4"
numpy = "^1.21"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"