[metadata]
name = pyparticle-viz
version = 0.1.0
description = A flexible plotting package for particle population visualization.
author = Your Name
author_email = your.email@example.com
url = https://github.com/yourusername/pyparticle-viz
license = MIT

[options]
packages = find:
install_requires =
    matplotlib
    numpy

[options.packages.find]
where = src

[options.extras_require]
testing =
    pytest
    pytest-cov

[options.entry_points]
console_scripts =
    pyparticle-viz = PyParticle.viz:main